--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="main">
-        <div class="title"></div>
+        <div class="title">Eläinvisa</div>
     </div>
     <script src="script.js"></script>
 </body>
