--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <div class="main">
         <div class="title">Eläinvisa</div>
+        <div class="mainsect">
+            <div class="question"></div>
+            <div class="count"></div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
