--- a/index.html
+++ b/index.html
@@ -1,19 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eläinvisa</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="main">
-        <div class="title">Eläinvisa</div>
-        <div class="mainsect">
-            <div class="question"></div>
-            <div class="count"></div>
+      <div class="titlesect">
+        <div class="intitle"></div>
+      </div>
+
+      <div class="mainsect">
+        <div class="inmainsect"></div>
+        <div class="question">
+          <div class="inquestion"></div>
         </div>
+        <div class="count">
+          <div class="incount"></div>
+        </div>
+        <div class="submit">
+          <div class="insubmit"></div>
+          <div class="button"></div>
+          <div class="inbutton"></div>
+        </div>
+        <div class="healthcounter">
+          <div class="inhealthcounter"></div>
+        </div>
+      </div>
     </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
