--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="main">
       <div class="titlesect">
-        <div class="intitle"></div>
+        <div class="intitle">Eläinvisa</div>
       </div>
 
       <div class="mainsect">
