--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       <div class="mainsect">
         <div class="inmainsect"></div>
         <div class="question">
-          <div class="inquestion"></div>
+          <div class="inquestion">
+            Mikä eläin: ruskea, karvainen, nukkuu talvet?
+          </div>
         </div>
         <div class="count">
           <div class="incount"></div>
