--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <div class="inmainsect"></div>
         <div class="question">
           <div class="inquestion">
-            Mikä eläin: ruskea, karvainen, nukkuu talvet?
+            Mikä eläin on kyseessä: ruskea, karvainen, nukkuu talvet?
           </div>
         </div>
         <div class="count">
           <div class="incount"></div>
         </div>
         <div class="submit">
-          <div class="insubmit"></div>
+          <div class="insubmit">Koala</div>
           <div class="button"></div>
-          <div class="inbutton"></div>
+          <div class="inbutton">Vastaus</div>
         </div>
         <div class="healthcounter">
           <div class="inhealthcounter"></div>
