--- a/index.html
+++ b/index.html
@@ -9,24 +9,29 @@
   <body>
     <div class="main">
       <div class="titlesect">
-        <div class="intitle"></div>
+        <div class="intitle">Eläinvisa</div>
       </div>
 
       <div class="mainsect">
         <div class="inmainsect"></div>
         <div class="question">
-          <div class="inquestion"></div>
+          <div class="inquestion">
+            Mikä eläin: ruskea, karvainen, nukkuu talvet?
+          </div>
+          <div class="hints"></div>
         </div>
         <div class="count">
-          <div class="incount"></div>
+          <div class="incount">0</div>
         </div>
         <div class="submit">
-          <div class="insubmit"></div>
+          <div class="insubmit">
+            <input type="text" name="" id="" />
+          </div>
           <div class="button"></div>
           <div class="inbutton"></div>
         </div>
         <div class="healthcounter">
-          <div class="inhealthcounter"></div>
+          <div class="inhealthcounter">3</div>
         </div>
       </div>
     </div>
