--- a/index.html
+++ b/index.html
@@ -18,14 +18,17 @@
           <div class="inquestion">
             Mikä eläin on kyseessä: ruskea, karvainen, nukkuu talvet?
           </div>
-          <div class="hints"></div>
+          <div class="hints">
+            Vinkki: Asuu metsässä, tassuissa kynnet, pitää hunajasta
+          </div>
         </div>
         <div class="count">
           <div class="incount">0</div>
         </div>
         <div class="submit">
           <div class="insubmit">
-            <input type="text" name="" id="" />
+            <label for="vastaus">Vastaus</label>
+            <input type="text" name="vastaus" id="vastaus" />
           </div>
           <div class="button"></div>
           <div class="inbutton"></div>
