--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
       </div>
 
       <div class="mainsect">
-        <div class="inmainsect"></div>
         <div class="question">
           <div class="inquestion">
             Mikä eläin on kyseessä: ruskea, karvainen, nukkuu talvet?
+            <div class="hints" style="text-align: start">Vinkkit:</div>
           </div>
-          <div class="hints"></div>
         </div>
         <div class="count">
           <div class="incount">0</div>
