--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <div class="question">
           <div class="inquestion">
             Mikä eläin on kyseessä: ruskea, karvainen, nukkuu talvet?
-            <div class="hints" style="text-align: start">Vinkkit:</div>
+            <div class="hints" style="text-align: start">
+              Vinkkit: Asuu metsässä, tassuissa kynnet, pitää hunajasta
+            </div>
           </div>
           <div class="hints"></div>
         </div>
