--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@
         </div>
         <div class="submit">
           <div class="insubmit">
-            <label for="vastaus">Vastaus</label>
+            <label for="vastaus">Vastaus</label><br />
             <input type="text" name="vastaus" id="vastaus" />
           </div>
           <div class="button"></div>
-          <div class="inbutton"></div>
+          <div class="inbutton">
+            <label for="nappi">Lähetä</label><br />
+            <input type="button" name="nappi" id="nappi" />
+          </div>
         </div>
         <div class="healthcounter">
           <div class="inhealthcounter">3</div>
