--- a/index.html
+++ b/index.html
@@ -34,14 +34,13 @@
         </div>
         <div class="submit">
           <div class="insubmit">
-            <label for="vastaus">Vastaus</label>
-            <input type="text" name="vastaus" id="vastaus" />
+            <div class="textSubmit">
+              <input type="text" name="vastaus" id="vastaus" />
+            </div>
+            <input type="submit" name="submit" value="submit" />
           </div>
           <div class="button"></div>
-          <div class="inbutton">
-            <label for="nappi">Lähetä</label><br />
-            <input type="button" name="nappi" id="nappi" />
-          </div>
+          <div class="inbutton"></div>
         </div>
         <div class="healthcounter">
           <div class="inhealthcounter">3</div>
