--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             <input type="submit" name="submit" value="submit" />
           </div>
           <div class="button"></div>
-          <div class="inbutton"></div>
+          <div class="inbutton">
+            <input type="button" name="nappi" id="nappi" />
+          </div>
         </div>
         <div class="healthcounter">
           <div class="inhealthcounter">3</div>
