--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
           </div>
           <div class="hints"></div>
         </div>
-        <div class="count">
-          <div class="incount">0</div>
+        <div class="counters">
+          <div class="count">
+            <div class="incount">0</div>
+          </div>
+          <div class="healthcounter">
+            <div class="inhealthcounter">3</div>
+          </div>
         </div>
         <div class="submit">
           <div class="insubmit">
@@ -43,9 +48,6 @@
           <div class="inbutton">
             <input type="button" name="nappi" id="nappi" />
           </div>
-        </div>
-        <div class="healthcounter">
-          <div class="inhealthcounter">3</div>
         </div>
       </div>
     </div>
