--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           </div>
           <div class="hints"></div>
         </div>
+        <div class="result"></div>
         <div class="counters">
           <div class="count">
             <div class="incount">0</div>
