--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <body>
     <div class="main">
       <div class="startScreen" id="startScreen">
+        <div class="intitle">Eläinvisa</div>
         <input
+          style="margin-top: 100px"
           type="submit"
           onclick="StartGame()"
           name="start"
