css stuff + exyra div

--- a/index.html
+++ b/index.html
@@ -47,21 +47,24 @@
             <div class="inhealthcounter">3</div>
           </div>
         </div>
-        <div class="submit">
-          <div class="insubmit">
-            <div class="textSubmit">
-              <input type="text" name="vastaus" id="vastaus" />
+      </div>
+      <div class="Vastausalue">
+          <div class="submit">
+            <div class="insubmit">
+              <div class="textSubmit">
+                <input type="text" name="vastaus" id="vastaus" />
+              </div>
+              <input
+                type="submit"
+                onclick="CheckAnswer()"
+                name="submit"
+                value="Palauta"
+              />
             </div>
-            <input
-              type="submit"
-              onclick="CheckAnswer()"
-              name="submit"
-              value="Palauta"
-            />
-          </div>
-          <div class="button"></div>
-          <div class="inbutton">
-            <input type="button" onclick="Test()" name="nappi" id="nappi" />
+            <div class="button"></div>
+            <div class="inbutton">
+              <input type="button" onclick="Test()" name="nappi" id="nappi" />
+            </div>
           </div>
         </div>
       </div>
