--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
           </div>
         </div>
       </div>
+
+      <div class="check"></div>
       
       <div class="Vastausalue">
           <div class="submit">
