--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         <div class="result"></div>
         <div class="counters">
           <div class="count">
-            <div class="incount">0</div>
+            <div class="incount" id="Counter">0/10</div>
           </div>
           <div class="healthcounter">
-            <div class="inhealthcounter">3</div>
+            <div class="inhealthcounter" id="HealthCounter">3</div>
           </div>
         </div>
       </div>
