--- a/index.html
+++ b/index.html
@@ -48,7 +48,14 @@
         </div>
       </div>
 
-      <div class="check"></div>
+      <div class="check">
+        <div class="wrong">
+          <div class="inwrong"></div>
+        </div>
+        <div class="correct">
+          <div class="insidecorrect"></div>
+        </div>
+      </div>
       
       <div class="Vastausalue">
           <div class="submit">
