--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 
       <div class="check">
         <div class="wrong">
-          <div class="inwrong"></div>
+          <div class="inwrong">WRONG</div>
         </div>
         <div class="correct">
-          <div class="insidecorrect"></div>
+          <div class="insidecorrect">CORRECT</div>
         </div>
       </div>
       
