--- a/index.html
+++ b/index.html
@@ -48,14 +48,7 @@
         </div>
       </div>
 
-      <div class="check">
-        <div class="wrong">
-          <div class="inwrong">WRONG</div>
-        </div>
-        <div class="correct">
-          <div class="insidecorrect">CORRECT</div>
-        </div>
-      </div>
+      <div class="check" id="checkValueAnswer"></div>
       
       <div class="Vastausalue">
           <div class="submit">
@@ -71,9 +64,6 @@
               />
             </div>
             <div class="button"></div>
-            <div class="inbutton">
-              <input type="button" onclick="Test()" name="nappi" id="nappi" />
-            </div>
           </div>
         </div>
       </div>
