--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="main">
+    <div class="main" id="TheEnd">
       <div class="startScreen" id="startScreen">
         <div class="intitle">Eläinvisa</div>
         <input
@@ -35,7 +35,7 @@
             Mikä eläin on kyseessä: - - -
           </div>
           <hr />
-          <div class="hints" id="hints">Vinkkit: - - -</div>
+          <div class="hints" id="hints">Vinkkit: <span style="color: rgb(255, 222, 187);">- - -</span></div>
         </div>
         <div class="result"></div>
         <div class="counters">
