--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
           value="Aloita"
         />
       </div>
-      <div class="titlesect">
-        <div class="intitle">Eläinvisa</div>
-        <div class="result"></div>
-        <div class="counters">
-          <div class="count">
-            <div class="incount" id="Counter">0/10</div>
-          </div>
-          <div class="healthcounter">
-            <div class="inhealthcounter" id="HealthCounter">3</div>
-          </div>
+      <div class="counters">
+        <div class="count">
+          <div class="incount" id="Counter">0/10</div>
+        </div>
+        <div class="healthcounter">
+          <div class="inhealthcounter" id="HealthCounter">3</div>
+        </div>
+        <div class="titlesect">
+          <div class="intitle">Eläinvisa</div>
+        </div>
       </div>
 
       <div class="mainsect">
@@ -43,31 +43,29 @@
             Mikä eläin on kyseessä: - - -
           </div>
           <hr />
-          <div class="hints" id="hints">Vinkkit: <span style="color: rgb(255, 222, 187);">- - -</span></div>
-        </div>
+          <div class="hints" id="hints">
+            Vinkkit: <span style="color: rgb(255, 222, 187)">- - -</span>
+          </div>
         </div>
       </div>
-
       <div class="check" id="checkValueAnswer"></div>
-      
       <div class="Vastausalue">
-          <div class="submit">
-            <div class="insubmit">
-              <div class="textSubmit">
-                <input type="text" name="vastaus" id="vastaus" />
-              </div>
-              <input
-                type="submit"
-                onclick="CheckAnswer()"
-                name="submit"
-                value="Palauta"
-              />
+        <div class="submit">
+          <div class="insubmit">
+            <div class="textSubmit">
+              <input type="text" name="vastaus" id="vastaus" />
             </div>
-            <div class="button"></div>
+            <input
+              type="submit"
+              onclick="CheckAnswer()"
+              name="submit"
+              value="Palauta"
+            />
           </div>
         </div>
       </div>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
