--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
       </div>
       <div class="titlesect">
         <div class="intitle">Eläinvisa</div>
-        <div class="result"></div>
-        <div class="counters">
+        <div class="result">
+          <div class="counters">
           <div class="count">
             <div class="incount" id="Counter">0/10</div>
           </div>
           <div class="healthcounter">
             <div class="inhealthcounter" id="HealthCounter">3</div>
+          </div>
           </div>
       </div>
 
@@ -46,6 +47,7 @@
           <div class="hints" id="hints">Vinkkit: <span style="color: rgb(255, 222, 187);">- - -</span></div>
         </div>
         </div>
+      </div>
       </div>
 
       <div class="check" id="checkValueAnswer"></div>
