--- a/index.html
+++ b/index.html
@@ -32,24 +32,13 @@
         <div class="healthcounter">
           <div class="inhealthcounter" id="HealthCounter">3</div>
         </div>
-        <div class="titlesect">
-          <div class="intitle">Eläinvisa</div>
-        </div>
-      <div class="titlesect">
-        <div class="intitle">Eläinvisa</div>
-        <div class="result">
-          <div class="counters">
-          <div class="count">
-            <div class="incount" id="Counter">0/10</div>
-          </div>
-          <div class="healthcounter">
-            <div class="inhealthcounter" id="HealthCounter">3</div>
-          </div>
-          </div>
       </div>
 
+      <div class="titlesect">
+        <div class="intitle">Eläinvisa</div>
+        <div class="result"></div>
+      </div>
       <div class="mainsect">
-        <!--E-->
         <div class="question">
           <div class="inquestion" id="question">
             Mikä eläin on kyseessä: - - -
@@ -59,10 +48,6 @@
             Vinkkit: <span style="color: rgb(255, 222, 187)">- - -</span>
           </div>
         </div>
-          <div class="hints" id="hints">Vinkkit: <span style="color: rgb(255, 222, 187);">- - -</span></div>
-        </div>
-        </div>
-      </div>
       </div>
       <div class="check" id="checkValueAnswer"></div>
       <div class="Vastausalue">
@@ -78,6 +63,7 @@
               value="Palauta"
             />
           </div>
+          <div class="button"></div>
         </div>
       </div>
     </div>
