added footer n style 4 it

--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
               value="Palauta"
             />
           </div>
-          <div class="button"></div>
         </div>
+      </div>
+      <div class="footer">
+        <div class="creators">Tekijät: Maxim ja Misa</div>
       </div>
     </div>
 
