--- a/index.html
+++ b/index.html
@@ -70,11 +70,7 @@
       </div>
     </div>
 
-    <audio
-      src="https://www.youtube.com/watch?v=t3B802PIuB0&list=RDQM9-_pQhewo7M&index=2"
-      autoplay
-      loop
-    ></audio>
+    <audio src="Hollow Knight OST - Crossroads.mp3" autoplay loop></audio>
 
     <script src="script.js"></script>
   </body>
